Closed Bug 1037000 Opened 10 years ago Closed 10 years ago

WebRTC Audio fails to pick the default microphone on Windows

Categories

(Core :: WebRTC: Audio/Video, defect)

33 Branch
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla33
Tracking Status
firefox31 --- wontfix
firefox32 --- verified
firefox33 --- verified

People

(Reporter: standard8, Assigned: jesup)

References

(Blocks 1 open bug, )

Details

Attachments

(1 file, 1 obsolete file)

STR:

1) Open up Firefox, and visit gum_test.html
2) See what the default audio device is
3) Change the Window's default recording device
4) Reload gum_test and see what the default audio device is

Expected Results

=> Matches the new setting

Actual Results

=> Always stays the same
Blocks: 1015486
Assignee: nobody → rjesup
OS: Windows 7 → All
Blocks: 1037025
disable on Android/B2G until investigated.  Works on Windows, Linux and Mac.  Note that typically, the default device will show first, and again later in the list.
Attachment #8453836 - Attachment is obsolete: true
Attachment #8453872 - Flags: review?(paul)
Attachment #8453872 - Flags: review?(paul) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/f2e5fb7f242c

We'll want this for 32 if at all possible.  Huge improvement for users (especially on windows) for changing 0 to -1.
Whiteboard: [webrtc-uplift]
https://hg.mozilla.org/mozilla-central/rev/f2e5fb7f242c
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
dangers of arrow keys...
Comment on attachment 8453872 [details] [diff] [review]
Include "default communications device" in the audio input enumeration for gUM

Approval Request Comment
[Feature/regressing bug #]: N/A

[User impact if declined]: the first device found will continue to be the default, requiring the user to change the audio device on every browser restart on the first call, which causes major user confusion.  (On mac, this already somewhat happens due to how the OS exposes things).

[Describe test coverage new/current, TBPL]: On m-c for a month.  Normal getUserMedia test coverage.

[Risks and why]: extremely low risk - effectively a single line change of 0 to -1 (which is a special value which has always been supported by the underlying code).

[String/UUID change made/needed]: none.
Attachment #8453872 - Flags: approval-mozilla-beta?
Attachment #8453872 - Flags: approval-mozilla-aurora?
Randell, the patch landed initially in 33. Why do you request the uplift for aurora? Mistake?
Flags: needinfo?(rjesup)
AH, yes - didn't notice (was going through all unresolved webrtc/screenshare/openh264-uplift whiteboard tags.)  Thanks
Flags: needinfo?(rjesup)
Attachment #8453872 - Flags: approval-mozilla-aurora?
Attachment #8453872 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Whiteboard: [webrtc-uplift]
(In reply to Mark Banner (:standard8) from comment #0)
> 1) Open up Firefox, and visit gum_test.html
The test page is N/A and it seems I can't reproduce the problem on http://apprtc.webrtc.org/.
Is there another way to reproduce it?
Flags: needinfo?(standard8)
Forget about comment 10.
I can reproduce the problem and it doesn't look fixed in the latest nightly too, if considering the default device as the first one from the share audio device list. Tested on Win 7.
(In reply to Paul Silaghi, QA [:pauly] from comment #11)
> Forget about comment 10.
> I can reproduce the problem and it doesn't look fixed in the latest nightly
> too, if considering the default device as the first one from the share audio
> device list. Tested on Win 7.

This works on my windows machine using win 7. You set the default device via Control Panel -> Sound -> Recording.

Using 2014-08-10 The default device correctly gets listed as the first item in the drop-down menu. I can switch between internal microphone and my headset, and it correctly picks up when I restart capturing the audio.
Flags: needinfo?(standard8)
Thanks Mark.
I was using the right click menu/Set as Default Device. I see it only works if using the second option - "Set as Default communication device", not sure what's the difference between them.
32b5, 33.0a2 (2014-08-11), 34.0a1 (2014-08-10), Win 7 x64
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: