Bug 1037000 - Include "default communications device" in the audio input enumeration for gUM. r=padenot, a=sledru